compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_private_unqualified_type_alias.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{X}\n\npub fn main() {\n  X\n}"
---
----- SOURCE CODE
-- one.gleam
type X = Int

-- main.gleam
import one.{X}

pub fn main() {
  X
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{X}
  │             ^

The module `one` does not have a `X` value.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:3
  │
4 │   X
  │   ^

The name `X` is not in scope here.
